<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@android:color/darker_gray">

        <EditText
            android:id="@+id/edt_add_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_name" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@android:color/darker_gray">

        <EditText
            android:id="@+id/edt_add_product_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_category" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@android:color/darker_gray">

        <EditText
            android:id="@+id/edt_add_product_quanlity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/product_quantity" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@android:color/darker_gray">

        <EditText
            android:id="@+id/edt_add_product_price"
            android:layout_width="match_parent"
            android:inputType="number"
            android:layout_height="wrap_content"
            android:hint="@string/product_price" />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/btn_add_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_button"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/add_product"
        android:textColor="@android:color/white" />

</LinearLayout>