<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@android:color/darker_gray">

        <EditText
            android:id="@+id/edt_add_product_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_id"
            android:inputType="phone" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@android:color/darker_gray">

        <EditText
            android:id="@+id/edt_add_sale_quanlity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_quantity" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_add_sale"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:text="@string/add_sale"
        android:textColor="@android:color/white" />


</LinearLayout>